# termchat

./: .gitignore  LICENCE  README.md  env.example  pyproject.toml  termchat.py
